<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Mataco</string>

    <!-- Strings related to login -->
    <string name="prompt_user">Padrón</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">Ingresar</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_user">El padrón ingresado tiene una cantidad de dígitos incorrecta</string>
    <string name="error_invalid_password">La contraseña es muy corta</string>
    <string name="error_incorrect_password">Contraseña inválida</string>
    <string name="error_username_required">Recuerde ingresar el padrón</string>
    <string name="error_password_required">Recuerde ingresar la contraseña</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_subjects">Oferta Académica</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="search">Search</string>
    <string name="name">Name</string>
    <string name="code">Code</string>
    <string name="department">Department</string>
    <string name="total_slots">Total Slots</string>
    <string name="state">Estado</string>
    <string name="professors">Professors</string>
    <string name="title_activity_courses">Cátedras</string>
    <string name="number">Number</string>
    <string name="classroom_campus">Classroom Campus</string>
    <string name="classroom_code">400</string>
    <string name="beginning">16:00</string>
    <string name="ending">18:00</string>
    <string name="day_of_week">lun</string>
    <string name="description">Teorico-Práctica Obligatoria</string>
    <string name="button_sign_up">Inscribirse</string>
    <string name="button_drop_out">Desinscribirse</string>
    <string name="classroom_code_header">Aula</string>
    <string name="description_header">Tipo</string>
    <string name="day_of_week_header">Dia</string>
    <string name="beginning_header">Desde</string>
    <string name="ending_header">Hasta</string>
    <string name="state_header">Estado</string>
    <string name="title_activity_my_courses">Mis Inscripciones</string>
    <string name="already_one_of_your_subjects">Ya te inscribiste en esta materia</string>
    <string name="course_content_title">Oferta Académica</string>
    <string name="title_activity_exam_subjects">Oferta Exámenes</string>
    <string name="title_activity_exams">Exámenes</string>
    <string name="instance">Instancia</string>
    <string name="date">16/04/18</string>
    <string name="id">Course ID</string>
    <string name="spinner_header">Estado</string>
    <string name="professor" tools:ignore="Typos">Profesor</string>
    <string name="no_available_courses">No hay cursos disponibles</string>
    <string name="no_available_exams">No hay exámenes disponibles</string>
    <string name="screen_title">Oferta Académica Cuatrimestre 2 de 2018</string>
    <string name="subtitle">Sistema de Gestión de Alumnos</string>
    <string name="title">Mataco</string>
    <string name="nav_subjects">Oferta Académica</string>
    <string name="nav_courses">Mis Inscripciones</string>
    <string name="nav_exam_subjects">Oferta Exámenes</string>
    <string name="nav_my_exams">Mis Inscripciones a Exámenes</string>
    <string name="exams_channel">Notificaciones de exámenes</string>
    <string name="exams_channel_desc">Notificaciones relacionadas con exámenes</string>
    <string name="courses_channel">Notificaciones de cursos</string>
    <string name="courses_channel_desc">Notificaciones relacionadas con cursos</string>
    <string name="general_channel">Notificaciones FIUBA</string>
    <string name="general_channel_desc">Notificaciones generales de FIUBA</string>
    <string name="exam_title">01/01/01 Juan Esteban Perez</string>
    <string name="nav_log_out">Cerrar Sesión</string>
    <string name="nav_student_record">Historial Académico</string>
    <string name="result">Nota: 9</string>
    <string name="date_header">Fecha</string>
    <string name="title_activity_my_exams">Mis Inscripciones a Examen</string>
    <string name="title_activity_student_record">Historial Académico</string>
    <string name="title_activity_subjects_select_career">Oferta Académica</string>
    <string name="title_activity_exam_subjects_select_career">Exámenes</string>
    <string name="icon">Icon</string>
    <string name="select_career">Seleccionar Carrera</string>
    <string name="career">Ingeniería en Informática</string>
    <string name="condition">Regular</string>
    <string name="no_available_subjects">No hay encuestas disponibles</string>
    <string name="cant_sing_up_courses">No es el período para inscribirse a cursos</string>
    <string name="cant_drop_out_courses">No es el período para desinscribirse a cursos</string>
    <string name="cant_sing_up_exams">No es el período para inscribirse a exámenes</string>
    <string name="cant_drop_out_exams">No es el período para desinscribirse a exámenes</string>
    <string name="nav_surveys">Encuestas</string>
    <string name="title_activity_survey_subjects">Encuestas</string>
    <string name="general_opinion">Opinión general sobre el curso</string>
    <string name="comentaries">Comentarios</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_10">10</string>
    <string name="theorical_class_level">Nivel de las clases teóricas del curso</string>
    <string name="practical_class_level">Nivel de las clases prácticas del curso</string>
    <string name="course_dificulty">Dificultad del curso</string>
    <string name="tp_dificulty">Dificultad del TP</string>
    <string name="interesting_toppics">¿Cómo te resultaron los temas de la materia?</string>
    <string name="updated_toppics">¿Los temas de la materia están actualizados?</string>
    <string name="aproved_course">¿Aprobó la cursada?</string>
    <string name="yes">Si</string>
    <string name="no">No</string>
    <string name="action_send_survey">Enviar</string>
    <string name="title_activity_survey">Encuesta</string>
    <string name="prompt_comentaries">Escribe un comentario aquí</string>
    <string name="error_radio">Debes contestar este item</string>
    <string name="survey_title">Encuesta de Curso</string>
    <string name="semester">Cuatrimesre 2 de 2018</string>
    <string name="error_authority_required">Debes ingresar el nombre de la autoridad</string>
    <string name="title_activity_certificate">Certificado de Alumno Regular</string>
    <string name="nav_certificate">Certificado Alumno Regular</string>
    <string name="prompt_authority">Escriba aquí el nombre de la autoridad</string>
    <string name="authority_title">Autoridad receptora del certificado:</string>
    <string name="certificate_title">Generar Certificad de Alumno Regular</string>
    <string name="action_generate_certificate">Generar Certificado</string>
    <string name="action_edit_password">Modificar</string>
    <string name="action_cancel">Cancelar</string>
    <string name="prompt_old_password">Contraseña actual</string>
    <string name="prompt_new_password">Nueva contraseña</string>
    <string name="prompt_repeat_password">Repetir contraseña</string>
    <string name="change_password">Cambiar contraseña:</string>
    <string name="error_new_password_required">Recuerde ingresar la nueva contraseña</string>
    <string name="error_repeat_password_required">Recuerde repetir la nueva contraseña</string>
    <string name="error_password_not_match">La contraseña ingresada no es la correcta</string>
    <string name="error_new_password_not_match">Las contraseñas no coinciden</string>
    <string name="nav_configuration">Configuración</string>
    <string name="title_activity_configuration">Configuración</string>
    <string name="error_new_password_same">La contraseña no debe ser la misma que la contraseña original</string>
    <string name="forgot_password">Si olvidaste tu contraseña, contactate con la administración</string>
</resources>
