<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">



    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_gravity="center"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp">

        <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/exams_parent_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:maxLines="2"
                android:text="@string/name"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/examiner" />

            <TextView
                android:id="@+id/code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:maxLines="2"
                android:text="@string/code"
                android:textSize="20sp"
                app:layout_constraintEnd_toStartOf="@+id/name"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/examiner" />

            <TextView
                android:id="@+id/examiner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:text="@string/professor"
                android:textColor="@android:color/darker_gray"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/classroom_code_header"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:text="@string/classroom_code_header"
                android:textSize="13sp"
                app:layout_constraintEnd_toStartOf="@+id/date_header"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintHorizontal_weight="10"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/name" />

            <TextView
                android:id="@+id/date_header"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:text="@string/date_header"
                android:textSize="13sp"
                app:layout_constraintEnd_toStartOf="@+id/beginning_header"
                app:layout_constraintHorizontal_weight="25"
                app:layout_constraintStart_toEndOf="@+id/classroom_code_header"
                app:layout_constraintTop_toBottomOf="@+id/name" />

            <TextView
                android:id="@+id/beginning_header"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:text="@string/beginning_header"
                android:textSize="13sp"
                app:layout_constraintEnd_toStartOf="@+id/ending_header"
                app:layout_constraintHorizontal_weight="15"
                app:layout_constraintStart_toEndOf="@+id/date_header"
                app:layout_constraintTop_toBottomOf="@+id/name" />

            <TextView
                android:id="@+id/ending_header"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:text="@string/ending_header"
                android:textSize="13sp"
                app:layout_constraintEnd_toStartOf="@+id/state_header"
                app:layout_constraintHorizontal_weight="15"
                app:layout_constraintStart_toEndOf="@+id/beginning_header"
                app:layout_constraintTop_toBottomOf="@+id/name" />

            <TextView
                android:id="@+id/state_header"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/state_header"
                android:textSize="13sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_weight="35"
                app:layout_constraintStart_toEndOf="@+id/ending_header"
                app:layout_constraintTop_toBottomOf="@+id/name" />


            <TextView
                android:id="@+id/classroom_code"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/classroom_code_header"
                android:textSize="13sp"
                app:layout_constraintEnd_toStartOf="@+id/date"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintHorizontal_weight="10"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/classroom_code_header" />

            <TextView
                android:id="@+id/date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/date"
                android:textSize="13sp"
                app:layout_constraintEnd_toStartOf="@+id/beginning"
                app:layout_constraintHorizontal_weight="25"
                app:layout_constraintStart_toEndOf="@+id/classroom_code"
                app:layout_constraintTop_toBottomOf="@+id/classroom_code_header" />

            <TextView
                android:id="@+id/beginning"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/beginning_header"
                android:textSize="13sp"
                app:layout_constraintEnd_toStartOf="@+id/ending"
                app:layout_constraintHorizontal_weight="15"
                app:layout_constraintStart_toEndOf="@+id/date"
                app:layout_constraintTop_toBottomOf="@+id/classroom_code_header" />

            <TextView
                android:id="@+id/ending"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/ending"
                android:textSize="13sp"
                app:layout_constraintEnd_toStartOf="@+id/state"
                app:layout_constraintHorizontal_weight="15"
                app:layout_constraintStart_toEndOf="@+id/beginning"
                app:layout_constraintTop_toBottomOf="@+id/classroom_code_header" />

            <Button
                android:id="@+id/button_drop_out"
                style="@android:style/Widget.Material.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:text="@string/button_drop_out"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/state"
                tools:targetApi="m" />

            <TextView
                android:id="@+id/classroom_campus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="16dp"
                android:text="@string/classroom_campus"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/state"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:text="@string/state"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_weight="35"
                app:layout_constraintStart_toEndOf="@+id/ending"
                app:layout_constraintTop_toBottomOf="@+id/classroom_code_header" />


        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.CardView>

</RelativeLayout>